修复编译器编译警告和建议